--- a/css/index.css
+++ b/css/index.css
@@ -18,24 +18,8 @@ body {
 .main-title {
 	color: #f97434 !important;
 }
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1; 
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #0c2e44; 
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #f97434; 
+.masthead {
+	margin-bottom: 10rem;
 }
 .home-page {
 	height: 100vh;
